assignment4/lab4.txt
Name: Stefanie Shidoosh
UID: 804794484

To make temp directory 
	$ mkdir temp
To download old stable, buggy, of coreutils. 
	$ wget https://web.cs.ucla.edu/classes/winter18/cs35L/assign/coreutils-with-bug.tar.gz
To build it as is 
	$ cd coreutils-with-bug
	$ ./configure --prefix=/u/eng/class/classesh/coreutilswithbugInstall
	$ make
	ERROR: 
	In file included from utimecmp.c:41:0:
	utimens.h:2:5: error: conflicting types for 'futimens'
	 int futimens (int, char const *, struct timespec const [2]);
     		^
	In file included from utimecmp.h:25:0,
                 from utimecmp.c:25:
	/usr/include/sys/stat.h:373:12: note: previous declaration of 'futimens' was here
 	extern int futimens (int __fd, const struct timespec __times[2]) __THROW;
        	    ^
	make[3]: *** [utimecmp.o] Error 1
	make[3]: Leaving directory `/w/home.07/class/classesh/coreutils-with-bug/lib'
	make[2]: *** [all] Error 2
	make[2]: Leaving directory `/w/home.07/class/classesh/coreutils-with-bug/lib'
	make[1]: *** [all-recursive] Error 1
	make[1]: Leaving directory `/w/home.07/class/classesh/coreutils-with-bug'
	make: *** [all] Error 2

To download patch
	$ wget https://web.cs.ucla.edu/classes/winter18/cs35L/assign/coreutils.diff
To build with patch
	$ patch -p0 < coreutils.diff 
Now, we can do make, make install
	$ make
	$ make install

Q: What problems did you have when building it as-is, 
and why did the renaming patch fix them?
	The patch renamed functions that were causing conflicting types (futimens). 
	The renaming patch changed the names of these functions by prepending "coreutils_"
	to distinguish them, thus fixing the compilation error. 
To reproduce the problem
	$ vim reproduceBug.sh
	in reproduceBug.sh:
		#!/bin/bash
		tmp=$(mktemp -d)
		cd $tmp
		touch -d '1918-11-11 11:00 GMT' wwi-armistice
		touch now
		sleep 1
		touch now1
		TZ=UTC0 /u/eng/class/classesh/coreutils-with-bug/src/ls -lt --full-time wwi-armistice now now1
		cd/u/eng/class/classesh/coreutils-with-bug
		rm -fr $tmp
	$ sh reproduceBug.sh
		-rw-r--r-- 1 classesh class 0 1918-11-11 11:00:00.000000000 +0000 wwi-armistice
		-rw-r--r-- 1 classesh class 0 2018-02-08 18:49:55.427697962 +0000 now1
		-rw-r--r-- 1 classesh class 0 2018-02-08 18:49:54.425670696 +0000 now
Using GDB to figure out what went wrong
	$ gdb /u/eng/class/classesh/coreutils-with-bug/src/ls
	(gdb) info functions
	in ls.c:
		static void sort_files(void);
	The way ls is sorting the files, hence how it's listing them, is the buggy behavior, so I suspect
	the problem is here. 
	(gdb)	b sort_files
	(gdb) r -lt --full-time wwi-armistice now now1
		Breakpoint 1 at 0x4040d0: file ls.c, line 2954.
	2962	  if (! setjmp (failed_strcoll))
(gdb) s
2964	      switch (sort_type)
(gdb) s
2969		  switch (time_type)
(gdb) s
2975		      func = sort_reverse ? rev_cmp_mtime : compare_mtime;
(gdb) p compare_mtime
	$6 = {int (V, V)} 0x4064c0 <compare_mtime>
(gdb) q
	function compare_mtime looks suspicious... so I set a breakpoint here. 


	$ gdb /u/eng/class/classesh/coreutils-with-bug/src/ls
	(gdb) b compare_mtime
	(gdb) r ls -lt --full-time wwi-armistice now now1
	Starting program: /u/eng/class/classesh/coreutils-with-bug/src/ls ls -lt --full-time wwi-armistice now now1
	/u/eng/class/classesh/coreutils-with-bug/src/ls: ls: No such file or directory

Breakpoint 1, compare_mtime (a=0x617170, b=0x617220) at ls.c:2884
2884	static int compare_mtime (V a, V b) { return cmp_mtime (a, b, xstrcoll); }
Missing separate debuginfos, use: debuginfo-install glibc-2.17-196.el7_4.2.x86_64
(gdb) s
cmp_mtime (cmp=0x404350 <xstrcoll>, b=0x617220, a=0x617170) at ls.c:2884
2884	static int compare_mtime (V a, V b) { return cmp_mtime (a, b, xstrcoll); }
(gdb) s
timespec_cmp (b=..., a=...) at ../lib/timespec.h:48
48	  int diff = a.tv_sec - b.tv_sec;
(gdb) p diff
$1 = 3
(gdb) s
49	  return diff ? diff : a.tv_nsec - b.tv_nsec;
(gdb) p diff
$2 = 1518147375
	This number is illogical, which hints at the possibility of integer overflow. 
	This occurs in timespec.h. 
To fix timespec.h
	$ cd coreutils-with-bug
	$ cd lib
	$ cp timespec.h newtimespec.h 
	$ mv newtimespec.h ~/timespec.h
	$ vim timespec.h
timespec_cmp (struct timespec a, struct timespec b)
{
if(a.tv_sec > b.tv_sec) {     
        return 1;
        }
  if(a.tv_sec < b.tv_sec) {
        return -1;
        }
  else {
        if (a.tv_nsec > b.tv_nsec) {
                return 1;
        }
        if(a.tv_nsec < b.tv_nsec) {
                return -1;
        }
        else
                return 0;
        }  
}

Construct patch file lab4.diff containing coreutils fixes, 
in the form of a ChangeLog entry followed by a diff -u patch. 
	$ diff -u coreutils-with-bug/lib/timespec.h timespec.h > lab4.diff
	To create ChangeLog entry, 
	$ emacs
	C-x 4 a
	"This patch corrects timespec.h in coreutils, preventing overflow by bypassing evaluation
        and instead returning positive, negative, or a value of zero for comparison result."
	C-x C-c
	$ cat lab4.diff >> ChangeLog
	$ mv ChangeLog lab4.diff
Checking if patch works! 
	$ cd coreutils-with-bug
        $ cd lib 
        $ rm timespec.h
        $ mv ~/timespec.h ~/coreutils-with-bug/lib/timespec.h
        $ cd ..
        $ ./configure --prefix=/u/eng/class/classesh/coreutilswithbugInstall
        $ make
        $ sh ~/reproduceBug.sh
	-rw-r--r-- 1 classesh class 0 2018-02-09 05:20:29.377185423 +0000 now1
	-rw-r--r-- 1 classesh class 0 2018-02-09 05:20:28.376158170 +0000 now
	-rw-r--r-- 1 classesh class 0 1918-11-11 11:00:00.000000000 +0000 wwi-armistice
	Patch works! :) 
Reproducing problem on SEASnet Linux servers home directory,
using the already-installed touch and ls 
utilities instead of the old version of coreutils
	$ touch -d '1918-11-11 11:00 GMT' wwi-armistice
	$ ls -lt 
	-rw-r--r--   1 classesh class       0 Dec 17  2054 wwi-armistice 
	 Also buggy! 
Q: How well does SEASnet do?
	SEASnet was also buggy, making old files to appear like they are in the future. 
	The above command demonstrates this, as the touch command set the year as 1918, 
	but SEASnet lists the last modified date in 2054.
	This has to do with how the SEASnet servers represent years on the bit-representaion 
	level. 
